--- a/spark-sdk/requirements.txt
+++ b/spark-sdk/requirements.txt
@@ -1,9 +1,9 @@
-build==0.10.0
-packaging==23.0
-py4j==0.10.9.5
-pyproject_hooks==1.0.0
-pyspark==3.3.1
-tomli==2.0.1
+build
+packaging
+py4j
+pyproject_hooks
+pyspark
+tomli
 snowflake-connector-python
 pandas
 trino
